Otimizado a meta descrição para SEO.

--- a/projeto-android/index.html
+++ b/projeto-android/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <meta name="description" content="Descubra a fascinante história do mascote do Android, desde suas primeiras versões até a criação do adorado robozinho verde. Explore a evolução do sistema operacional e suas curiosidades tecnológicas. Saiba mais sobre a primeira versão do Android e a origem de seu icônico mascote.">
+    <meta name="description" content="Descubra a história do mascote do Android, sua evolução, curiosidades tecnológicas e a origem do icônico robozinho verde.">
     <title>Como surgiu o mascote do Android?</title>
 </head>
 <body>
