📚 docs: Tratamento de erros

--- a/projeto-social/index.html
+++ b/projeto-social/index.html
@@ -19,12 +19,13 @@
         </section>
 
         <div class="text-wrapper">
-            <h1>Olá 👋, eu sou <span>SouzaStack</span></h1>
+            <h1>Olá 👋, eu sou</h1>
+            <h2>Souza Stack</h2>
             <p>Este projeto foi desenvolvido com o Curso em Vídeo e aprimorado por mim, com ajustes feitos com dedicação e paixão pelo aprendizado.</p>
         </div>
 
         <nav class="social-nav">
-            <a href="#" target="tela" class="social-link"><img src="image/logo-home.png" alt="Home" class="social-icon"></a>
+            <a href="src/home.html" target="tela" class="social-link"><img src="image/logo-home.png" alt="Home" class="social-icon"></a>
             <a href="#" target="tela" class="social-link"><img src="image/logo-github.png" alt="GitHub" class="social-icon"></a>
             <a href="#" target="tela" class="social-link"><img src="image/logo-instagram.png" alt="Instagram" class="social-icon"></a>
             <a href="#" target="tela" class="social-link"><img src="image/logo-youtube.png" alt="YouTube" class="social-icon"></a>
