--- a/projeto-social/src/home.html
+++ b/projeto-social/src/home.html
@@ -13,7 +13,7 @@
         body {
             width: 100vw;
             height: 100vh;
-            background: #000 url('../image/tela-home.jpg') no-repeat top center;
+            background: #000 url('../image/tela-home.png') no-repeat top center;
             background-size: cover;
         }
     </style>
