♿ Update: Correção de acessibilidade.

--- a/projeto-social/index.html
+++ b/projeto-social/index.html
@@ -24,11 +24,14 @@
             <p>Este projeto foi desenvolvido com o Curso em Vídeo e aprimorado por mim, com ajustes feitos com dedicação e paixão pelo aprendizado.</p>
         </div>
 
-        <nav class="social-nav">
-            <a href="src/home.html" target="tela" class="social-link"><img src="image/logo-home.png" alt="Home" class="social-icon"></a>
-            <a href="#" target="tela" class="social-link"><img src="image/logo-github.png" alt="GitHub" class="social-icon"></a>
-            <a href="#" target="tela" class="social-link"><img src="image/logo-instagram.png" alt="Instagram" class="social-icon"></a>
-            <a href="#" target="tela" class="social-link"><img src="image/logo-youtube.png" alt="YouTube" class="social-icon"></a>
+        <nav class="social-nav" aria-label="Redes sociais">
+            <a href="src/home.html" target="tela" class="social-link" aria-label="Home"><img src="image/logo-home.png" alt="Home" class="social-icon"></a>
+
+            <a href="#" target="tela" class="social-link" aria-label="GitHub"><img src="image/logo-github.png" alt="GitHub" class="social-icon"></a>
+
+            <a href="#" target="tela" class="social-link" aria-label="Instagram"><img src="image/logo-instagram.png" alt="Instagram" class="social-icon"></a>
+
+            <a href="#" target="tela" class="social-link" aria-label="YouTube"><img src="image/logo-youtube.png" alt="YouTube" class="social-icon"></a>
         </nav>
     </main>
 </body>
