--- a/projeto-social/index.html
+++ b/projeto-social/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SouzaStack - Desenvolvedor Front-End</title>
+    <title>Projeto Social - Front End</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="SouzaStack é um desenvolvedor front-end apaixonado por criar projetos incríveis. Confira meu projeto social e entre em contato.">
+    <meta name="keywords" content="SouzaStack, desenvolvedor front-end, contato">
+    <meta name="author" content="SouzaStack">
+    <meta name="robots" content="index, follow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <main class="main-content">
