Ad: Social perfil youtube

--- a/projeto-social/index.html
+++ b/projeto-social/index.html
@@ -36,7 +36,7 @@
 
             <a href="#" target="tela" class="social-link" aria-label="Instagram"><img src="image/logo-instagram.png" alt="Instagram" class="social-icon"></a>
 
-            <a href="#" target="tela" class="social-link" aria-label="YouTube"><img src="image/logo-youtube.png" alt="YouTube" class="social-icon"></a>
+            <a href="src/youtube.html" target="tela" class="social-link" aria-label="YouTube"><img src="image/logo-youtube.png" alt="YouTube" class="social-icon"></a>
         </nav>
     </main>
 </body>
