🔗 Social: Integração de perfis externos.

--- a/projeto-social/index.html
+++ b/projeto-social/index.html
@@ -32,9 +32,9 @@
         <nav class="social-nav" aria-label="Redes sociais">
             <a href="src/home.html" target="tela" class="social-link" aria-label="Home"><img src="image/logo-home.png" alt="Home" class="social-icon"></a>
 
-            <a href="#" target="tela" class="social-link" aria-label="GitHub"><img src="image/logo-github.png" alt="GitHub" class="social-icon"></a>
+            <a href="src/github.html" target="tela" class="social-link" aria-label="GitHub"><img src="image/logo-github.png" alt="GitHub" class="social-icon"></a>
 
-            <a href="#" target="tela" class="social-link" aria-label="Instagram"><img src="image/logo-instagram.png" alt="Instagram" class="social-icon"></a>
+            <a href="src/instagram.html" target="tela" class="social-link" aria-label="Instagram"><img src="image/logo-instagram.png" alt="Instagram" class="social-icon"></a>
 
             <a href="src/youtube.html" target="tela" class="social-link" aria-label="YouTube"><img src="image/logo-youtube.png" alt="YouTube" class="social-icon"></a>
         </nav>
