--- a/projeto-social/src/github.html
+++ b/projeto-social/src/github.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube</title>
+    <title>GitHub</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <a href="https://www.youtube.com/@TOKYO-YT/playlists" target="_blank">
-        <img src="../image/tela-youtube.jpg" class="social-img" alt="Perfil YouTube">
+    <a href="https://github.com/SouzaStack" target="_blank">
+        <img src="../image/tela-github.jpg" class="social-img" alt="Perfil GitHub">
     </a>
 </body>
 </html>
