--- a/projeto-login/register.html
+++ b/projeto-login/register.html
@@ -9,10 +9,16 @@
 </head>
 <body>
     <main>
-        <section class="description section-tres"></section>
+        <section class="description section-tres">
+            <div>
+                <h1>Já faz parte da nossa comunidade?</h1>
+            </div>
+            <p>Aqui, você tem acesso a um sistema completo, feito para oferecer praticidade e segurança. Com sua conta, você pode gerenciar seu perfil, acompanhar seu progresso e aproveitar todas as funcionalidades exclusivas. Se você já possui um cadastro, faça login agora mesmo e continue sua jornada sem interrupções.</p>
+            <h2>Continue exatamente de onde parou...</h2>
+            <a href="index.html">Acessar minha conta</a>
+        </section>
 
         <section class="register section-quatro">
-            <div>
                 <h1>Crie sua conta</h1>
                 <p>Junte-se à Plataforma</p>
 
@@ -31,7 +37,6 @@
 
                     <input type="submit" value="CADASTRAR">
                 </form>
-            </div>
         </section>
     </main>
 </body>
