--- a/projeto-login/index.html
+++ b/projeto-login/index.html
@@ -16,16 +16,15 @@
                     <h2>Inovação em Sistemas</h2>
                 </header>
                 <p>Acesse o <span>PAINEL ESTRATÉGICO</span></p>
-                <br>
                 <form action="login.php">
                     <div class="painel">
                         <label for="ilogin">USUÁRIO</label>
                         <input type="text" name="login" id="ilogin" placeholder="Digite seu login" required>
-
+                        
                         <label for="isenha">SENHA</label>
                         <input type="password" name="senha" id="isenha" placeholder="Digite sua senha" required>
 
-                        <div class="reminder">
+                        <div>
                             <label for="ilembrar">
                                 <input type="checkbox" name="lembrar" id="ilembrar">Manter Conectado
                             </label>
