--- a/projeto-login/index.html
+++ b/projeto-login/index.html
@@ -18,22 +18,23 @@
                 <p>Acesse o <span>PAINEL ESTRATÉGICO</span></p>
                 <form action="login.php">
                     <div class="painel">
-                        <label for="ilogin">USUÁRIO</label>
-                        <input type="text" name="login" id="ilogin" placeholder="Digite seu login" required>
+                        <label for="ilogin">Email:</label>
+                        <input type="text" name="login" id="ilogin" placeholder="Email" required>
                         
-                        <label for="isenha">SENHA</label>
-                        <input type="password" name="senha" id="isenha" placeholder="Digite sua senha" required>
+                        <label for="isenha">Senha:</label>
+                        <input type="password" name="senha" id="isenha" placeholder="Senha" required>
 
-                        <div>
-                            <label for="ilembrar">
-                                <input type="checkbox" name="lembrar" id="ilembrar">Manter Conectado
-                            </label>
-                            <p><a href="#">Recuperar Senha</a></p>
-                        </div>
+                        <label for="ilembrar">
+                            <input type="checkbox" name="lembrar" id="ilembrar">Manter Conectado
+                        </label>
                     </div>
 
                     <input type="submit" value="ENTRAR">
-                    <p>Ainda não possui uma conta? <a href="register.html">Clique Aqui</a></p>
+
+                    <p>
+                        <a href="register.html">Criar uma conta</a> &#10072;
+                        <a href="#">Esqueceu a senha?</a>
+                    </p>
                 </form>
             </div>
         </section>
