--- a/projeto-login/index.html
+++ b/projeto-login/index.html
@@ -19,15 +19,15 @@
                 <a href="https://github.com/SouzaStack" target="_blank"><img src="./assets/images/github.png" alt="Github">GitHub</a>
                 <a href="https://t.me/SouzaStack" target="_blank"><img src="./assets/images/telegrama.png" alt="Telegram">Telegram</a>
             </div>
-            <form action="login.php" method="POST" autocomplete="off">
+            <form action="login.php" method="POST" autocomplete="on">
                 <div class="input-container">
                     <i class="fa-solid fa-envelope"></i>
-                    <input type="email" name="email" id="ilogin" placeholder="Digite seu e-mail" required>
+                    <input type="email" name="email" id="ilogin" placeholder="Digite seu e-mail" autocomplete="email" maxlength="30" required>
                 </div>
                 
                 <div class="input-container">
                     <i class="fa-solid fa-lock"></i>
-                    <input type="password" name="password" id="isenha" placeholder="Digite sua senha" required>
+                    <input type="password" name="password" id="isenha" placeholder="Digite sua senha" autocomplete="current-password" minlength="8" maxlength="20" required>
                 </div>                              
 
                 <div>
